# AudioPlay

./: README.md
AudioTrackPlay/: build.gradle  config.gradle  gradle.properties  settings.gradle
AudioTrackPlay/app/: .gitignore  and_res_guard.gradle  build.gradle  keystore.properties
AudioTrackPlay/app/src/androidTest/java/com/hmh/audiotrackplay/: ExampleInstrumentedTest.kt
AudioTrackPlay/app/src/main/: AndroidManifest.xml
AudioTrackPlay/app/src/main/cpp/: CMakeLists.txt  logUtils.h  native-lib.cpp
AudioTrackPlay/app/src/main/cpp/media/: test.h
AudioTrackPlay/app/src/main/cpp/media/decord/: DecodeState.h  IDecoder.cpp  IDecoder.h
AudioTrackPlay/app/src/main/cpp/openGlAudio/: OpenslAudioPlay.cpp  OpenslAudioPlay.h  audioengine.h
AudioTrackPlay/app/src/main/cpp/openSLRecord/: OpenRecordPlay.cpp  OpenRecordPlay.h  SLAudioRecord.cpp  SLAudioRecord.h
AudioTrackPlay/app/src/main/debug/: AndroidManifest.xml
AudioTrackPlay/app/src/main/java/com/hmh/audiotrackplay/: BaseApplication.kt  MainActivity.kt
AudioTrackPlay/app/src/main/java/com/hmh/audiotrackplay/audioTrack/: AudioTracker.kt  IPlay.kt  Status.kt
AudioTrackPlay/app/src/main/java/com/hmh/audiotrackplay/ffmpegPlayer/: PlayerActivity.kt
AudioTrackPlay/app/src/main/java/com/hmh/audiotrackplay/hook/: AcitvityHook.java  HookActivityHelper.java  HookOneActivity.java  ProxyInstrumentation.java  RefInvoke.java
AudioTrackPlay/app/src/main/java/com/hmh/audiotrackplay/record/: AudioRecorder.java  FileUtil.java  RecordStreamListener.java
AudioTrackPlay/app/src/main/jniLibs/arm64-v8a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
AudioTrackPlay/app/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
AudioTrackPlay/app/src/main/release/: AndroidManifest.xml
AudioTrackPlay/app/src/main/res/layout/: activity_hook_one.xml  activity_main.xml  activity_player.xml
AudioTrackPlay/app/src/main/res/values/: strings.xml
AudioTrackPlay/app/src/test/java/com/hmh/audiotrackplay/: ExampleUnitTest.kt
AudioTrackPlay/gradle/wrapper/: gradle-wrapper.properties
AudioTrackPlay/small/: build.gradle
AudioTrackPlay/small/src/androidTest/java/com/east/small/: ExampleInstrumentedTest.kt
AudioTrackPlay/small/src/main/: AndroidManifest.xml
AudioTrackPlay/small/src/main/java/com/east/small/: MainActivity.kt
AudioTrackPlay/small/src/main/res/values/: strings.xml  themes.xml
AudioTrackPlay/small/src/main/res/values-night/: themes.xml
AudioTrackPlay/small/src/test/java/com/east/small/: ExampleUnitTest.kt
